deploy/manifests/gitrello/gitrello-deployment.yaml
# TODO add requests & limits
# TODO increase replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitrello
  labels:
    app: gitrello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitrello
  template:
    metadata:
      labels:
        app: gitrello
    spec:
      containers:
      - image: fnsdev/gitrello:latest
        name: gitrello
        ports:
        - containerPort: 80
          name: gitrello
