deploy/manifests/gitrello/gitrello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitrello-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - gitrello.me
        - www.gitrello.me
      secretName: tls
  rules:
    - host: gitrello.me
      http:
        paths:
        - path: /
          backend:
            serviceName: gitrello
            servicePort: 80
    - host: www.gitrello.me
      http:
        paths:
          - path: /
            backend:
              serviceName: gitrello
              servicePort: 80
